--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="About">About us</a>
                         </li>
-                        <li class="nav-item">
+                        @if(User.Identity.IsAuthenticated) {
+                            <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Courses" asp-action="Index">Courses</a>
                         </li>
                         <li class="nav-item">
@@ -37,9 +38,14 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Students" asp-action="Index">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Classes" asp-action="Index">Class Management</a>
                         </li>
+                        
+                        }
+                        
+                        
                     </ul>
+                    <partial name="_LoginPartial"/>
                 </div>
             </div>
         </nav>
